fixed header issues on firefox and safari; changed header layout into a full width design

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -2,47 +2,103 @@
   position: relative
   z-index: 9999
   .firstHeader
-    padding: 12px 0
+    position: relative
+    height: 50px
     text-transform: uppercase
     text-shadow: 0 -1px 0 rgba(#000, 0.2)
     @include shadow(0 -10px 5px -10px rgba(#000, 0.3) inset)
     @include gradient(#f86a6a, #f04848, #ff2b30)
-    .logo
-      font-size: 14px
-      color: #fff
-      text-transform: uppercase
-      text-decoration: none
-      vertical-align: middle
-      padding: 2px 0
-    .register
-      margin-right: 5px
+    .logoContainer
+      position: relative
+      display: inline-block
+      .logo
+        font-size: 14px
+        color: #fff
+        text-transform: uppercase
+        text-decoration: none
+        vertical-align: middle
+        line-height: 50px
+        padding-left: 15px
+    .actionButtonsContainer
+      position: absolute
+      right: 15px
+      top: 7px
+      .btn
+        padding: 10px
+      .register
+        margin-right: 5px
   .secondHeader
+    position: relative
+    height: 50px
     text-shadow: 0 -1px 0 rgba(#fff, 0.3)
     @include rgba-bg(#fff, 0.7)
     @include shadow(0 1px 2px 0 rgba(#000, 0.2), 0 -1px 0 0 rgba(#fff, 0.5) inset)
-    .nav, .counter
-      height: 60px
-      display: table
+    .menu, .counter
       .link
         color: rgba($blackfont, 0.8)
-        padding: 0 15px
-        display: table-cell
-        vertical-align: middle
-    .nav
+        display: inline-block
+    .menu
+      position: relative
+      display: inline-block
+      padding-left: 15px
       .link
         font-weight: 700
         text-transform: uppercase
+        font-size: 11px
+        position: relative
         text-decoration: none
+        padding: 0 15px
+        line-height: 50px
         &:hover
           color: $redfont
           @include gradient(rgba(#000, 0.05), transparent, transparent)
           @include transition(all 0.3s linear)
+        &:after
+          content: ""
+          position: absolute
+          top: 0
+          right: 0
+          width: 1px
+          height: 50px
+          display: inline-block
+          @include gradient(rgba(#000, 0.15), transparent, transparent)
+      .firstLink
+        &:before
+          content: ""
+          position: absolute
+          top: 0
+          left: 0
+          width: 1px
+          height: 50px
+          display: inline-block
+          @include gradient(rgba(#000, 0.15), transparent, transparent)
     .counter
-      height: 60px
       text-align: right
+      position: absolute
+      padding: 0 15px
+      height: 50px
+      line-height: 60px
+      right: 15px
+      top: 0
       text-transform: uppercase
       @include gradient(transparent, rgba(#000, 0.03), transparent)
-      .verticalSeparator
+      &:before
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        width: 1px
+        height: 50px
+        display: inline-block
+        @include gradient(transparent, rgba(#000, 0.15), transparent)
+      &:after
+        content: ""
+        position: absolute
+        top: 0
+        right: 0
+        width: 1px
+        height: 50px
+        display: inline-block
         @include gradient(transparent, rgba(#000, 0.15), transparent)
       .number
         font-size: 15px
