--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -71,12 +71,6 @@ footer
   &:active
     @include shadow(0 0 5px 0 rgba(#000, 0.1) inset)
 
-.verticalSeparator
-  width: 1px
-  height: 100%
-  display: inline-block
-  @include gradient(rgba(#000, 0.15), transparent, transparent)
-
 .whiteContainer
   background: #fafafa
   @include border-radius(3px)
